# abir-guard

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PUBLISHING.md  README.md  SECURITY.md  TASKS.md  THREAT_MODEL.md  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci-cd.yml  publish.yml
abir_guard/: __init__.py  abir_hsm.py  attestation.py  crewai.py  crypto_store.py  differential_privacy.py  fips_mode.py  hardware_enclave.py  langchain.py  mcp_http.py  ml_kem.py  py.typed  revocation.py  rotation.py  tpm2_seal.py  yubikey_integration.py
examples/: quick_start.py  secure_crewai_agent.py
scripts/: debug.sh  publish-crates.sh  publish-pypi.sh
sdk/go/: abirguard.go  abirguard_test.go  go.mod
src/: abir_guard.js  differential_privacy.rs  entropy_inject.rs  kdf.rs  lib.rs  main.rs  mcp_gateway.rs  ml_dsa.rs  persistent_vault.rs  quantum_kernel.rs  revocation.rs  rotation.rs  shamir.rs  zero_copy.rs
tests/: run_tests.py  test_abir_guard.py  test_phase2_hardware.py  test_phase3.py
