[package]
name = "abir_guard"
version = "1.0.0"
edition = "2021"
description = "Abir-Guard: Quantum-Resilient Agentic Vault for AI Agent Memory"
authors = ["Abir Maheshwari"]
license = "MIT"
repository = "https://github.com/abir-guard/abir-guard"
homepage = "https://github.com/abir-guard/abir-guard"
readme = "README.md"

[dependencies]
aes-gcm = "0.10"
hkdf = "0.12"
sha3 = "0.10"
rand = "0.8"
digest = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "abir-guard"
path = "src/main.rs"

[lib]
name = "abir_guard"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
