[package]
name = "abir_guard"
version = "3.0.0"
edition = "2021"
description = "Abir-Guard: Quantum-Resilient Agentic Vault for AI Agent Memory"
authors = ["Abir Maheshwari <abhirsxn@gmail.com>"]
license = "MIT"
repository = "https://github.com/abir-guard/abir-guard"
homepage = "https://github.com/abir-guard/abir-guard"
readme = "README.md"

[dependencies]
aes-gcm = "0.10"
hkdf = "0.12"
sha3 = "0.10"
sha2 = "0.10"
rand = "0.10"
getrandom = "0.4"
digest = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
dirs = "5"
argon2 = { version = "0.5", features = ["alloc"] }
lazy_static = "1"
fips204 = "0.4"
ml-kem = { version = "0.3", features = ["getrandom", "zeroize"] }
ring = "0.17"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "abir-guard"
path = "src/main.rs"

[lib]
name = "abir_guard"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
