[package]
name = "abir_guard"
version = "3.1.0"
edition = "2021"
rust-version = "1.70"
description = "Abir-Guard: Quantum-Resilient Agentic Vault for AI Agent Memory with NIST-standard Post-Quantum Cryptography"
authors = ["Abir Maheshwari <abhirsxn@gmail.com>"]
license = "MIT"
repository = "https://github.com/Abiress/abir-guard"
homepage = "https://github.com/Abiress/abir-guard"
documentation = "https://docs.rs/abir_guard"
readme = "README.md"
keywords = [
    "cryptography",
    "post-quantum",
    "ml-kem",
    "ml-dsa",
    "security",
    "ai-agent",
    "encryption",
    "vault",
    "fips-140-3",
    "quantum-resistant",
]
categories = [
    "cryptography",
    "security",
    "command-line-utilities",
]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
aes-gcm = "0.10"
hkdf = "0.12"
sha3 = "0.10"
sha2 = "0.10"
rand = "0.10"
getrandom = "0.4"
digest = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
dirs = "5"
argon2 = { version = "0.5", features = ["alloc"] }
lazy_static = "1"
fips204 = "0.4"
ml-kem = { version = "0.3", features = ["getrandom", "zeroize"] }
ring = "0.17"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "abir-guard"
path = "src/main.rs"

[lib]
name = "abir_guard"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
