[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abir-guard"
version = "3.0.0"
description = "PQC Agent Memory Vault - Quantum-resistant vault for AI Agent memory"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Abir Maheshwari", email = "abhirsxn@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cryptography>=42.0",
    "argon2-cffi>=23.0",
]
requires-python = ">=3.10"
keywords = [
    "ai", "agent", "encryption", "post-quantum", 
    "pqc", "security", "vault", "memory", "llm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-benchmark",
    "black",
    "ruff",
    "mypy",
]
langchain = [
    "pydantic>=2.0",
]
crewai = [
    "pydantic>=2.0",
    "crewai>=0.30.0",
]
all = [
    "abir-guard[dev,langchain,crewai]",
]

[project.scripts]
abir-guard = "abir_guard:main"

[project.urls]
Homepage = "https://github.com/abir-guard/abir-guard"
Documentation = "https://abir-guard.dev/docs"
Repository = "https://github.com/abir-guard/abir-guard"
Issues = "https://github.com/abir-guard/abir-guard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["abir_guard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true