[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abir-guard"
version = "3.1.1"
description = "PQC Agent Memory Vault - Quantum-resistant vault for AI Agent memory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Abir Maheshwari", email = "abhirsxn@gmail.com"}
]
maintainers = [
    {name = "Abir Maheshwari", email = "abhirsxn@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = [
    "ai", "agent", "encryption", "post-quantum", 
    "pqc", "security", "vault", "memory", "llm",
    "yubikey", "fido2", "tpm", "hardware-security",
    "ml-kem", "ml-dsa", "nist", "fips-140-3",
]
dependencies = [
    "cryptography>=42.0",
    "argon2-cffi>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-benchmark",
    "black",
    "ruff",
    "mypy",
    "build",
    "twine",
]
langchain = [
    "pydantic>=2.0",
    "langchain-core>=0.1.0",
]
crewai = [
    "pydantic>=2.0",
    "crewai>=0.30.0",
]
hardware = [
    "fido2>=1.1.0",
    "tpm2-pytss>=2.0.0",
    "cryptography>=42.0",
]
pqcrypto = [
    "pqcrypto>=0.4.0",
]
all = [
    "abir-guard[dev,langchain,crewai,hardware,pqcrypto]",
]

[project.scripts]
abir-guard = "abir_guard:main"

[project.urls]
Homepage = "https://github.com/Abiress/abir-guard"
Documentation = "https://github.com/Abiress/abir-guard#readme"
Repository = "https://github.com/Abiress/abir-guard"
"Issue Tracker" = "https://github.com/Abiress/abir-guard/issues"
"Changelog" = "https://github.com/Abiress/abir-guard/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["abir_guard*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
abir_guard = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py310"]

[build]
universal = false
